<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/contactFormView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.NewContactForm">

  <ImageView
      android:id="@+id/backToDirectoryButton"
      android:layout_width="52dp"
      android:layout_height="49dp"
      android:layout_marginTop="4dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:srcCompat="@mipmap/ic_arrow_back" />

  <TableLayout
      android:layout_width="342dp"
      android:layout_height="520dp"
      android:layout_marginTop="92dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.492"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:contentDescription="@string/description_form_user_name_ic"
            app:srcCompat="@mipmap/ic_contact_avatar" />

        <EditText
            android:id="@+id/contactFormAbonentName"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/hint_user_name"
            android:inputType="textPersonName" />

      </LinearLayout>

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp">

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_gravity="clip_vertical"
            android:layout_marginEnd="15dp"
            android:contentDescription="@string/description_form_user_phone_ic"
            app:srcCompat="@mipmap/ic_contact_phone" />

        <EditText
            android:id="@+id/contactFormAbonentPhone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/hint_user_phone"
            android:inputType="phone" />
      </LinearLayout>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp">

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:contentDescription="@string/description_form_user_email_ic"
            app:srcCompat="@mipmap/ic_email" />

        <EditText
            android:id="@+id/contactFormAbonentEmailAddress"
            android:layout_width="264dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/hint_user_email"
            android:inputType="textEmailAddress" />
      </LinearLayout>

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="70dp">

      <Button
          android:id="@+id/createContactButton"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/button_contact_form" />
    </TableRow>
  </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>